force-app/main/default/objects/Partner_Add_On_Association__c/Partner_Add_On_Association__c.object-meta.xml
<CustomObject>
    <description>Junction Object used to associate Partner Accounts with Add-On Products</description>
    <label>Partner Add-On Association</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Partner Add-On  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Add-On Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>