force-app/main/default/objects/Partner_Add_On_Association__c/fields/Add_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Product__c</fullName>
    <description>Add-On Product the Associated Partner is related to</description>
    <inlineHelpText>Add-On Product the Associated Partner is related to</inlineHelpText>
    <label>Add-On Product</label>
    <referenceTo>Add_On_Products__c</referenceTo>
    <relationshipLabel>Partner Add-On Associations</relationshipLabel>
    <relationshipName>Partner_Add_On_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>