force-app/main/default/objects/Partner_Add_On_Association__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <description>Partner Account associated with the Add-On Product</description>
    <inlineHelpText>Partner Account associated with the Add-On Product</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Add-On Associations</relationshipLabel>
    <relationshipName>Partner_Add_On_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>