force-app/main/default/objects/Partner_Add_On_Association__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Payroll Provider + Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>