force-app/main/default/objects/Partner_Add_On_Association__c/recordTypes/Payroll_Partner_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Partner_Add_On</fullName>
    <active>true</active>
    <label>Payroll Partner Add-On</label>
</RecordType>